added instagram link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <a href="https://www.linkedin.com/in/aminu-ali-4185b3321" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" width="24"></a>
       <a href="https://github.com/paulmadaki" target="_blank"><img src="images/github.svg" alt="GitHub" width="24"></a>
       <a href="https://www.facebook.com/paul.ali.5203" target="_blank"><img src="images/facebook.svg" alt="Facebook" width="24"></a>
-      <a href="URL_ADDRESS" target="_blank"><img src="images/instagram.svg" alt="Instagram" width="24"></a>
+      <a href="https://www.instagram.com/mr_paas?igsh=eWdtMTJyZjZnZXp0" target="_blank"><img src="images/instagram.svg" alt="Instagram" width="24"></a>
 
     </p>
     <p>&copy; <span id="year"></span> Paul Ali • Nigeria</p>
