--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Polo Chamber of Commerce">
   <meta name="author" content="Paul Ali">
+  <meta property="og:title" content="Paul's Web development assignment portal">
+  <meta property="og:description" content="WDD 231 - Web Frontend Development">
+  <meta property="og:url" content="https://paulmadaki.github.io/wdd231/">
+  <meta property="og:image" content="https://raw.githubusercontent.com/paulmadaki/wdd231/main/images/paul.jpg">
   <title>WDD 231 - Home</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/small.css">
   <link rel="stylesheet" href="styles/larger.css">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/course-list.css">
+  <link rel="icon" href="images/favicon.ico">
+  
   
 
 
