--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -26,7 +26,7 @@
       <button id="menuBtn">☰</button>
       <ul id="navLinks">
         <li><a href="index.html">Home</a></li>
-        <li><a href="../chamber/index.html">Directory</a></li>
+        <li><a href="directory.html">Directory</a></li>
         <li><a href="join.html">Join</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
