Corrected the spelling in h1

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -39,7 +39,7 @@
 
   <main>
     <aside id="visit-message" class="sidebar"></aside>
-    <h1>Otukpo Local Life | Events, Places, and Opportunities.</h1>
+    <h1>Otukpo Local Life, Events, Places, and Opportunities.</h1>
     <div id="cards" class="cards"></div>
 
 
