Update the Final link in the nav bar on my week 1 page to point to my week 6 final project.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul id="navMenu" class="nav-menu">
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="../chamber/index.html">Chamber</a></li>
-        <li><a href="../final/index.html">Final project</a></li>
+        <li><a href="./project/index.html">Final project</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
