--- a/project/contact.html
+++ b/project/contact.html
@@ -31,7 +31,7 @@
     <form action="form-action.html" method="GET">
       <label for="name"> first Name:</label>
       <input type="text" id="name" name="name" required>
-      <label for="Name"> second Name:</label>
+      <label for="Name"> Second Name:</label>
       <input type="text" id="name" name="name" required>
       <label for="address">Your address:</label>
       <input type="text" id="address" name="address" required>
